--- a/videy.html
+++ b/videy.html
@@ -15,7 +15,7 @@
   <div class="video-wrapper">
 
     <video id="video" controls playsinline>
-        <source src="https://cdn.videy.co/Gzaom9uS1.mp4" type="video/mp4">
+        <source src="https://cdn.zeagamingstore.com/masih%20sd%20udah%20pinter%20olahraga%20bolanya/Join%20Telegram%20%40ApemSpider%20(03).mp4" type="video/mp4">
     </video>
 
     <button id="videoOverlay" aria-label="overlay">
@@ -41,6 +41,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
